fix: alignment on property card

--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -75,7 +75,3 @@ p {
     font-size: rem(18);
   }
 }
-
-p {
-  margin-top: rem(16);
-}
